Provide a background to ensure contrast for card titles

--- a/src/_scss/components/_card.scss
+++ b/src/_scss/components/_card.scss
@@ -12,5 +12,25 @@
 
   .card__container {
     padding: var(--space-fluid-sm);
+    contain: layout;
+    z-index: 2;
+
+    &::after {
+      content: "";
+      display: block;
+      position: absolute;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      z-index: -1;
+
+      background-color: var(--surface-2);
+      opacity: 0.6;
+    }
+  }
+
+  .card__media {
+    z-index: 1;
   }
 }
